# k8s-appfocus-backup

./: .gitignore  Containerfile  README.md  artifacthub-repo.yml  index.yaml  pyproject.toml
.github/workflows/: container-publish.yml
charts/karb/: Chart.yaml  values.yaml
charts/karb/templates/: _helpers.tpl  deployment.yaml  monitoring.yaml
charts/templates/: service.yaml  serviceaccount.yaml  webhookconfiguration.yaml
helm/: Chart.yaml
helm/templates/: NOTES.txt  certificate.yaml  deployment.yaml  serviceaccount.yaml
src/: main.py
